# OboeDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/oboedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: acoustic.h  audio_analyze.h  audio_recognize.h  audio_resampler.h  audio_sfft.h  audio_tune.h  dsp_base.h  flux_base.h  resample_algorithm.h
app/src/main/cpp/libmp3lame/: lame.c
app/src/main/cpp/oboe/: AudioPlay.cpp  AudioPlay.h  AudioRecord.cpp  AudioRecord.h  native-lib.cpp  wrapper.cpp
app/src/main/cpp/opoe/: AudioEngine.cpp  AudioEngine.h  native-lib.cpp  wrapper.h
app/src/main/java/com/example/oboedemo/: FileUtil.java  MainActivity.java  PcmToWavUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/oboedemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
